<resources>
    <string name="app_name">MemoReminder</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username :</string>
    <string name="password">password :</string>
    <string name="login">login</string>
    <string name="login_page">Login Page</string>
    <string name="register">create an account</string>
    <string name="register2">register </string>
    <string name="firstName">first name :</string>
    <string name="lastName">last name :</string>
    <string name="email">email :</string>
    <string name="error_for_login">invalid username or password :</string>
    <string name="error_for_add_tag"> can not add tag. try again later :</string>
    <string name="modification">modification :</string>
    <string name="login_successful">login successful</string>
    <string name="user_name_taken_already">username taken already</string>
    <string name="error_for_pick_color">you must first pick up a color</string>
    <string name="empty_field">every fields should be filled"</string>
    <string name="register_successful">register was successful</string>
    <string name="tag_added_successful">tag created successfully</string>
    <string name="error_connection_server">can not connect to server</string>
    <string name="logout_successful">logout successful</string>
    <string name="accept_request">accept</string>
    <string name="delete_request">delete</string>
    <string name="friend_requests_title">Friend Requests</string>
    <string name="request_sent_successfully">Friend Request sent successfully</string>
    <string name="send_request_error">request can not be sent. Try later</string>
    <string name="accept_friend_request">this user was added to your contact</string>
    <string name="reject_friend_request">you rejected this friend request</string>
    <string name="remove_friend">this user removed from your friends successfully</string>
    <string name="title_activity_maps">Map</string>

</resources>